--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -3,28 +3,35 @@
 <title>{% block title %}{% endblock %} - WatchTogether</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 
-<nav>
-    <h1>Watch-Together</h1>
-    <ul>
+<nav class="navbar">
+  <div class="logo">
+    <a href="{{ url_for('vroom.index') }}">Watch-Together</a>
+  </div>
+
+    <ul class="navbar-links">
       {% if current_user.is_authenticated %}
-        <li><span>{{ current_user.username}}</span>
-        <li><a href="{{ url_for('vroom.create') }}">Create Room</a>
-        <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+      <li><a >{{ current_user.username}}</a></li>
+      <li><a href="{{ url_for('vroom.create') }}">Create Room</a></li>
+      <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
       {% else %}
-        <li><a href="{{ url_for('auth.register') }}">Register</a>
-        <li><a href="{{ url_for('auth.login') }}">Log In</a>
+      <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+      <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
       {% endif %}
     </ul>
+
 </nav>
 
 <section class="content">
-    <header>
-      {% block header %}{% endblock %}
-    </header>
-    {% for message in get_flashed_messages() %}
-      <div class="flash">{{ message }}</div>
-    {% endfor %}
-    {% block content %}{% endblock %}
+  <header>
+    {% block header %}{% endblock %}
+  </header>
+  {% for message in get_flashed_messages() %}
+  <div class="flash">{{ message }}</div>
+  {% endfor %}
+  
+  {% block content %}{% endblock %}
 </section>
