--- a/flaskr/templates/vroom/vroom.html
+++ b/flaskr/templates/vroom/vroom.html
@@ -16,11 +16,10 @@
     <form method="post">
         <label for="username">User To Add</label>
         <input name="username" id="username"  required>        
-        <input type="submit" value="Save">
+        <input type="submit" value="Add">
     </form>
-{%endif%}
 
-{%if !is_admin  %}
+{%else  %}
     <h3>Play to Sync</h3>
 {%endif%}
 
