--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -31,12 +31,12 @@ body {
 .navbar-links li a {
     text-decoration: none;
     color: white;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 5px 10px;
 }
 
 .navbar-links li a:hover {
-    background-color: #181818;
+    background-color:	#3d3d3d;
     color: aqua;
 }
 
@@ -62,6 +62,11 @@ hr {
     border: none;
     border-top: 1px solid lightgray;
 }
+
+.title {
+    color:#cae6f6;
+}
+
 /*main content*/
 
 .container {
@@ -73,17 +78,24 @@ hr {
 
 .list-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr  ));
-    grid-gap: 30px;
-    margin-top: 16px;
+    grid-template-columns: repeat(4, minmax(min-content, 0));
+    grid-column-gap: 16px;
+    grid-row-gap: 32px;    
+   margin-top: 16px;
 }
 .vid-list .thumbnail {
     width: 286.98px;
     border-radius: 15px;
 }
+.vid-info a {
+    color: white;
+    text-decoration: none;
+}
 .content {
     padding: 0 1rem 1rem;
 }
+
+
 
 .content>header {
     border-bottom: 1px solid lightgray;
