--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
-{% endblock %}
-
 {% block content %}
+
+<div class="login-box">
+
+  <h2>Login</h2>
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+    <div class="user-box">
+      <input name="username" id="username" required>
+      <label>Username</label>
+
+    </div>
+
+    <div class="user-box">
+      <input type="password" name="password" id="password" required>
+      <label>Password</label>
+    </div>
     <input type="submit" value="Log In">
   </form>
+
+</div>
 {% endblock %}
