--- a/flaskr/templates/vroom/create.html
+++ b/flaskr/templates/vroom/create.html
@@ -8,7 +8,7 @@
     <form method="post">
         <label for="vid_id">Video Url</label>
         <input name="vid_id" id="vid_id"  required>        
-        <input type="submit" value="Create">
+        <input type="submit" value="Save">
     </form>
 
 {% endblock %}
